--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,14 +35,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    flavorDimensions "default"
-    productFlavors {
-        demo {
-            applicationIdSuffix ".demo"
-        }
-        prod {}
-    }
 }
 
 dependencies {
@@ -66,6 +58,10 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
     kapt "com.google.dagger:dagger-android-processor:${versions.dagger}"
 
+    implementation "com.google.firebase:firebase-core:16.0.3"
+    implementation "com.google.firebase:firebase-firestore:17.1.0"
+    implementation "com.google.firebase:firebase-inappmessaging-display:17.0.1"
+
     implementation "com.jakewharton.timber:timber:${versions.timber}"
 
     implementation "com.android.billingclient:billing:${versions.billing}"
@@ -74,3 +70,16 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion versions.support_library
+            }
+        }
+    }
+}
+
+apply plugin: 'com.google.gms.google-services'
