--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@
 buildscript {
     // Define Versions in a single place
     ext.versions = [
-            'kotlin'         : '1.2.60',
+            'kotlin'         : '1.2.61',
             'support_library': '28.0.0-rc02',
             'const_layout'   : '1.1.3',
             'arch_comp'      : '1.1.1',
@@ -39,6 +39,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:3.2.1'
     }
 }
 
