--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,45 @@
-# Java Gradle CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-java/ for more details
-#
 version: 2
 jobs:
   build:
+    working_directory: ~/code
     docker:
       - image: circleci/android:api-27-alpha
-    working_directory: ~/repo
-
     environment:
-      # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
-      TERM: dumb
-
     steps:
       - checkout
-
-      # Download and cache dependencies
+      - run:
+          name: export KEYSTORE path
+          command: echo 'export KEYSTORE=${HOME}/code/keystore.jks' >> $BASH_ENV
+      - run:
+          name: Download keystore signing
+          command: bash ./misc/download_keystore.sh
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "build.gradle" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: gradle dependencies
-
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
       - save_cache:
           paths:
             - ~/.gradle
-          key: v1-dependencies-{{ checksum "build.gradle" }}
-
-      # run tests!
-      - run: gradle test
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Build assembleRelease
+          command: ./gradlew assembleRelease
+      - store_artifacts:
+          path: app/build/outputs/apk
+          destination: apk
+     # - deploy:
+     #     name: "Deploy to Fabric 🎉🎉"
+     #     filters:
+     #         branches:
+     #           only: master
+     #     command: ./gradlew assembleRelease crashlyticsUploadDistributionRelease
+      - run:
+          name: Run Tests
+          command: ./gradlew lint test
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
