--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,23 @@
+# Java Gradle CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
+#
 version: 2
 jobs:
   build:
-    working_directory: ~/code
     docker:
       - image: circleci/android:api-27-alpha
+    working_directory: ~/repo
+
     environment:
+      # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
+      TERM: dumb
+
     steps:
       - checkout
-      - run:
-          name: export KEYSTORE path
-          command: echo 'export KEYSTORE=${HOME}/code/keystore.jks' >> $BASH_ENV
-      - run:
-          name: Download keystore signing
-          command: bash ./misc/download_keystore.sh
+
+      # Download and cache dependencies
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
@@ -29,12 +33,6 @@ jobs:
       - store_artifacts:
           path: app/build/outputs/apk
           destination: apk
-     # - deploy:
-     #     name: "Deploy to Fabric 🎉🎉"
-     #     filters:
-     #         branches:
-     #           only: master
-     #     command: ./gradlew assembleRelease crashlyticsUploadDistributionRelease
       - run:
           name: Run Tests
           command: ./gradlew lint test
