--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
 
     steps:
       - checkout
+      - run:
+        name: export google_services json
+        command: echo $GOOGLE_SERVICES_JSON | base64 --decode > ~/${HOME}/app/google-services.json
 
       # Download and cache dependencies
       - restore_cache:
