--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,10 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
