--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
             'const_layout'   : '1.1.3',
             'arch_comp'      : '1.1.1',
             'dagger'         : '2.16',
+            'coroutines'     : '0.26.0',
             'timber'         : '4.7.0',
             'billing'        : '1.1',
             'mockito'        : '2.13.0'
@@ -36,9 +37,6 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:${versions.kotlin}"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:3.2.1'
     }
 }
