--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.home.HomeActivity"
-            android:theme="@style/Theme.Hymnal.Home"/>
+        <activity
+            android:name=".ui.home.HomeActivity"
+            android:theme="@style/Theme.Hymnal.Home"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".ui.home.hymns.search.SearchActivity"
+            android:theme="@style/Theme.Hymnal.Search" />
     </application>
 
 </manifest>
