--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ buildscript {
     // Define Versions in a single place
     ext.versions = [
             'kotlin'         : '1.2.70',
-            'support_library': '28.0.0-rc02',
+            'support_library': '28.0.0',
             'const_layout'   : '1.1.3',
             'arch_comp'      : '1.1.1',
             'dagger'         : '2.16',
