--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2018. Tinashe Mzondiwa.
+# Copyright (c) 2019. Tinashe Mzondiwa.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -29,3 +29,5 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 kotlin.coroutines=enable
+android.useAndroidX=true
+android.enableJetifier=true
