--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
     // Define Versions in a single place
     ext.versions = [
             'kotlin'         : '1.3.61',
+            'material'       : '1.2.0-alpha03',
             'const_layout'   : '1.1.3',
             'arch_comp'      : '1.1.1',
             'dagger'         : '2.22.1',
