--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,8 @@ dependencies {
 
     implementation "com.jakewharton.timber:timber:${versions.timber}"
 
+    implementation 'com.pandora.bottomnavigator:bottom-navigator:1.3'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
