load hymnals in new library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "app.hymnal"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -91,9 +91,12 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}"
 
-    implementation 'com.google.firebase:firebase-analytics:17.2.1'
-    implementation "com.google.firebase:firebase-firestore:21.3.1"
-    implementation "com.google.firebase:firebase-inappmessaging-display:19.0.2"
+    implementation "com.google.firebase:firebase-analytics:${versions.firebase_analytics}"
+    implementation "com.google.firebase:firebase-auth:${versions.firebase_auth}"
+    implementation "com.google.firebase:firebase-firestore:${versions.firebase_store}"
+    implementation "com.google.firebase:firebase-storage:${versions.firebase_storage}"
+    implementation "com.google.firebase:firebase-messaging:${versions.firebase_msg}"
+    implementation "com.firebaseui:firebase-ui-storage:${versions.firebase_ui}"
 
     implementation "com.jakewharton.timber:timber:${versions.timber}"
 
