--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,14 @@ buildscript {
             'dagger'         : '2.22.1',
             'coroutines'     : '1.2.1',
             'timber'         : '4.7.1',
-            'mockito'        : '2.13.0'
+            'mockito'        : '2.13.0',
+            'firebase_core'  : '17.2.1',
+            'firebase_auth'  : '19.2.0',
+            'firebase_storage': '19.1.0',
+            'firebase_store' : '21.3.1',
+            'firebase_msg'   : '20.1.0',
+            'firebase_ui'    : '3.3.0',
+            'firebase_analytics': '17.2.1'
     ]
     repositories {
         google()
