--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
             'const_layout'   : '1.1.3',
             'arch_comp'      : '1.1.1',
             'dagger'         : '2.22.1',
+            'glide'          : '4.10.0',
             'coroutines'     : '1.2.1',
             'timber'         : '4.7.1',
             'mockito'        : '2.13.0',
