--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,8 @@ dependencies {
     implementation "com.jakewharton.timber:timber:${versions.timber}"
 
     implementation 'com.pandora.bottomnavigator:bottom-navigator:1.3'
+    implementation "io.noties.markwon:core:${versions.markwon}"
+    implementation "io.noties.markwon:html:${versions.markwon}"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
