--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ buildscript {
             'firebase_storage': '19.1.0',
             'firebase_store' : '21.3.1',
             'firebase_ui'    : '3.3.0',
-            'firebase_analytics': '17.2.1'
+            'firebase_analytics': '17.2.1',
+            'markwon'        : '4.1.1',
     ]
     repositories {
         google()
