--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019. Tinashe Mzondiwa.
+ * Copyright (c) 2020. Tinashe Mzondiwa.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -70,18 +70,18 @@ dependencies {
 
     implementation "com.google.android.material:material:${versions.material}"
 
-    implementation 'androidx.core:core-ktx:1.2.0-rc01'
+    implementation 'androidx.core:core-ktx:1.3.0-alpha01'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-reactivestreams:2.1.0'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.1.0'
-    implementation 'androidx.room:room-rxjava2:2.2.3'
-    kapt 'androidx.room:room-compiler:2.2.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-reactivestreams:2.2.0'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+    implementation 'androidx.room:room-rxjava2:2.2.4'
+    kapt 'androidx.room:room-compiler:2.2.4'
 
     implementation "com.google.dagger:dagger-android:${versions.dagger}"
     implementation "com.google.dagger:dagger-android-support:${versions.dagger}"
